=== master

* Only rescue non-disconnect Sequel::DatabaseErrors in Postgres::Database#server_version (jeremyevans) (#1724)

* Make the single_table_inheritance and prepared_statements plugins work if loaded into the same class (jeremyevans) (#1721)

=== 5.37.0 (2020-10-01)

* Recognize more unsigned decimal/float types in the schema dumper (akimd, jeremyevans) (#1720)

* Add Postgres::PGRow::{Array,Hash}Row#op to the pg_row_ops extension if the pg_row extension is loaded (jeremyevans)

* Add Model#column_previously_was and #column_previously_changed? to the dirty plugin (jeremyevans)

* Raise Migrator::Error if attempting to migrate down to a version where there are necessary migration files missing (jeremyevans) (#1716)

=== 5.36.0 (2020-09-01)

* Handle passing keyword arguments through class methods defined via Plugins.def_dataset_method on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through when loading plugins on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through migrations when defining custom Database methods that accept keywords on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through Dataset#query when using the query extension on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through the association proxy when using the association_proxies plugin on Ruby 2.7+ (jeremyevans)

* Handle passing keyword arguments through the class method to a method defined in dataset_module on Ruby 2.7+ (adam12) (#1713)

* Stream result sets in the odbc adapter for better performance and lower memory usage (sparrovv) (#1711)

* Add Postgres::JSONBOp#set_lax and #path_*_tz methods to the pg_json_ops extension for new jsonb functions added in PostgreSQL 13 (jeremyevans)

* Add Dataset#with_ties on PostgreSQL 13+ and Microsoft SQL Server to include rows with same order as final row (jeremyevans)
